// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie Movie Component should match the snapshot when there is a user logged in and it is a favorite 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Movie
    favorite={true}
    id={123}
    rating={9}
    release="May4bewithyou"
    text="MovieText"
    title="MovieTitle"
    user={
      Object {
        "name": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt=""
          src="https://image.tmdb.org/t/p/w500undefined"
        />,
        <div
          className="movie-info"
        >
          <div
            className="rating"
          >
            <span>
              9.0
            </span>
            <i
              className="fas fa-star"
            />
          </div>
          <h2>
            MovieTitle
          </h2>
          <h5>
            May4bewithyou
          </h5>
          <p>
            MovieText
          </p>
          <Link
            replace={false}
            to="/login"
          >
            <button
              className="add-to-favs"
            >
              Login to Save
            </button>
          </Link>
        </div>,
      ],
      "className": "movie favorite",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "src": "https://image.tmdb.org/t/p/w500undefined",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="rating"
            >
              <span>
                9.0
              </span>
              <i
                className="fas fa-star"
              />
            </div>,
            <h2>
              MovieTitle
            </h2>,
            <h5>
              May4bewithyou
            </h5>,
            <p>
              MovieText
            </p>,
            <Link
              replace={false}
              to="/login"
            >
              <button
                className="add-to-favs"
              >
                Login to Save
              </button>
            </Link>,
          ],
          "className": "movie-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  9.0
                </span>,
                <i
                  className="fas fa-star"
                />,
              ],
              "className": "rating",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "9.0",
                },
                "ref": null,
                "rendered": "9.0",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fas fa-star",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "MovieTitle",
            },
            "ref": null,
            "rendered": "MovieTitle",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "May4bewithyou",
            },
            "ref": null,
            "rendered": "May4bewithyou",
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "MovieText",
            },
            "ref": null,
            "rendered": "MovieText",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <button
                className="add-to-favs"
              >
                Login to Save
              </button>,
              "replace": false,
              "to": "/login",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Login to Save",
                "className": "add-to-favs",
              },
              "ref": null,
              "rendered": "Login to Save",
              "type": "button",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="https://image.tmdb.org/t/p/w500undefined"
          />,
          <div
            className="movie-info"
          >
            <div
              className="rating"
            >
              <span>
                9.0
              </span>
              <i
                className="fas fa-star"
              />
            </div>
            <h2>
              MovieTitle
            </h2>
            <h5>
              May4bewithyou
            </h5>
            <p>
              MovieText
            </p>
            <Link
              replace={false}
              to="/login"
            >
              <button
                className="add-to-favs"
              >
                Login to Save
              </button>
            </Link>
          </div>,
        ],
        "className": "movie favorite",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "https://image.tmdb.org/t/p/w500undefined",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="rating"
              >
                <span>
                  9.0
                </span>
                <i
                  className="fas fa-star"
                />
              </div>,
              <h2>
                MovieTitle
              </h2>,
              <h5>
                May4bewithyou
              </h5>,
              <p>
                MovieText
              </p>,
              <Link
                replace={false}
                to="/login"
              >
                <button
                  className="add-to-favs"
                >
                  Login to Save
                </button>
              </Link>,
            ],
            "className": "movie-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    9.0
                  </span>,
                  <i
                    className="fas fa-star"
                  />,
                ],
                "className": "rating",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "9.0",
                  },
                  "ref": null,
                  "rendered": "9.0",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-star",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "MovieTitle",
              },
              "ref": null,
              "rendered": "MovieTitle",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "May4bewithyou",
              },
              "ref": null,
              "rendered": "May4bewithyou",
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "MovieText",
              },
              "ref": null,
              "rendered": "MovieText",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <button
                  className="add-to-favs"
                >
                  Login to Save
                </button>,
                "replace": false,
                "to": "/login",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Login to Save",
                  "className": "add-to-favs",
                },
                "ref": null,
                "rendered": "Login to Save",
                "type": "button",
              },
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Movie Movie Component should match the snapshot when there is a user logged in and not a favorite 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Movie
    favorite={false}
    id={123}
    rating={9}
    release="May4bewithyou"
    text="MovieText"
    title="MovieTitle"
    user={
      Object {
        "name": "",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt=""
          src="https://image.tmdb.org/t/p/w500undefined"
        />,
        <div
          className="movie-info"
        >
          <div
            className="rating"
          >
            <span>
              9.0
            </span>
            <i
              className="fas fa-star"
            />
          </div>
          <h2>
            MovieTitle
          </h2>
          <h5>
            May4bewithyou
          </h5>
          <p>
            MovieText
          </p>
          <Link
            replace={false}
            to="/login"
          >
            <button
              className="add-to-favs"
            >
              Login to Save
            </button>
          </Link>
        </div>,
      ],
      "className": "movie false",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "src": "https://image.tmdb.org/t/p/w500undefined",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="rating"
            >
              <span>
                9.0
              </span>
              <i
                className="fas fa-star"
              />
            </div>,
            <h2>
              MovieTitle
            </h2>,
            <h5>
              May4bewithyou
            </h5>,
            <p>
              MovieText
            </p>,
            <Link
              replace={false}
              to="/login"
            >
              <button
                className="add-to-favs"
              >
                Login to Save
              </button>
            </Link>,
          ],
          "className": "movie-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  9.0
                </span>,
                <i
                  className="fas fa-star"
                />,
              ],
              "className": "rating",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "9.0",
                },
                "ref": null,
                "rendered": "9.0",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fas fa-star",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "MovieTitle",
            },
            "ref": null,
            "rendered": "MovieTitle",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "May4bewithyou",
            },
            "ref": null,
            "rendered": "May4bewithyou",
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "MovieText",
            },
            "ref": null,
            "rendered": "MovieText",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <button
                className="add-to-favs"
              >
                Login to Save
              </button>,
              "replace": false,
              "to": "/login",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Login to Save",
                "className": "add-to-favs",
              },
              "ref": null,
              "rendered": "Login to Save",
              "type": "button",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="https://image.tmdb.org/t/p/w500undefined"
          />,
          <div
            className="movie-info"
          >
            <div
              className="rating"
            >
              <span>
                9.0
              </span>
              <i
                className="fas fa-star"
              />
            </div>
            <h2>
              MovieTitle
            </h2>
            <h5>
              May4bewithyou
            </h5>
            <p>
              MovieText
            </p>
            <Link
              replace={false}
              to="/login"
            >
              <button
                className="add-to-favs"
              >
                Login to Save
              </button>
            </Link>
          </div>,
        ],
        "className": "movie false",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "https://image.tmdb.org/t/p/w500undefined",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="rating"
              >
                <span>
                  9.0
                </span>
                <i
                  className="fas fa-star"
                />
              </div>,
              <h2>
                MovieTitle
              </h2>,
              <h5>
                May4bewithyou
              </h5>,
              <p>
                MovieText
              </p>,
              <Link
                replace={false}
                to="/login"
              >
                <button
                  className="add-to-favs"
                >
                  Login to Save
                </button>
              </Link>,
            ],
            "className": "movie-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    9.0
                  </span>,
                  <i
                    className="fas fa-star"
                  />,
                ],
                "className": "rating",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "9.0",
                  },
                  "ref": null,
                  "rendered": "9.0",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-star",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "MovieTitle",
              },
              "ref": null,
              "rendered": "MovieTitle",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "May4bewithyou",
              },
              "ref": null,
              "rendered": "May4bewithyou",
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "MovieText",
              },
              "ref": null,
              "rendered": "MovieText",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <button
                  className="add-to-favs"
                >
                  Login to Save
                </button>,
                "replace": false,
                "to": "/login",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Login to Save",
                  "className": "add-to-favs",
                },
                "ref": null,
                "rendered": "Login to Save",
                "type": "button",
              },
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Movie Movie Component should match the snapshot when there is not a user logged in 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Movie
    id={123}
    rating={9}
    release="May4bewithyou"
    text="MovieText"
    title="MovieTitle"
    user={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <img
          alt=""
          src="https://image.tmdb.org/t/p/w500undefined"
        />,
        <div
          className="movie-info"
        >
          <div
            className="rating"
          >
            <span>
              9.0
            </span>
            <i
              className="fas fa-star"
            />
          </div>
          <h2>
            MovieTitle
          </h2>
          <h5>
            May4bewithyou
          </h5>
          <p>
            MovieText
          </p>
          <Link
            replace={false}
            to="/login"
          >
            <button
              className="add-to-favs"
            >
              Login to Save
            </button>
          </Link>
        </div>,
      ],
      "className": "movie undefined",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "",
          "src": "https://image.tmdb.org/t/p/w500undefined",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="rating"
            >
              <span>
                9.0
              </span>
              <i
                className="fas fa-star"
              />
            </div>,
            <h2>
              MovieTitle
            </h2>,
            <h5>
              May4bewithyou
            </h5>,
            <p>
              MovieText
            </p>,
            <Link
              replace={false}
              to="/login"
            >
              <button
                className="add-to-favs"
              >
                Login to Save
              </button>
            </Link>,
          ],
          "className": "movie-info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span>
                  9.0
                </span>,
                <i
                  className="fas fa-star"
                />,
              ],
              "className": "rating",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "9.0",
                },
                "ref": null,
                "rendered": "9.0",
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fas fa-star",
                },
                "ref": null,
                "rendered": null,
                "type": "i",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "MovieTitle",
            },
            "ref": null,
            "rendered": "MovieTitle",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "May4bewithyou",
            },
            "ref": null,
            "rendered": "May4bewithyou",
            "type": "h5",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "MovieText",
            },
            "ref": null,
            "rendered": "MovieText",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <button
                className="add-to-favs"
              >
                Login to Save
              </button>,
              "replace": false,
              "to": "/login",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Login to Save",
                "className": "add-to-favs",
              },
              "ref": null,
              "rendered": "Login to Save",
              "type": "button",
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <img
            alt=""
            src="https://image.tmdb.org/t/p/w500undefined"
          />,
          <div
            className="movie-info"
          >
            <div
              className="rating"
            >
              <span>
                9.0
              </span>
              <i
                className="fas fa-star"
              />
            </div>
            <h2>
              MovieTitle
            </h2>
            <h5>
              May4bewithyou
            </h5>
            <p>
              MovieText
            </p>
            <Link
              replace={false}
              to="/login"
            >
              <button
                className="add-to-favs"
              >
                Login to Save
              </button>
            </Link>
          </div>,
        ],
        "className": "movie undefined",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "",
            "src": "https://image.tmdb.org/t/p/w500undefined",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="rating"
              >
                <span>
                  9.0
                </span>
                <i
                  className="fas fa-star"
                />
              </div>,
              <h2>
                MovieTitle
              </h2>,
              <h5>
                May4bewithyou
              </h5>,
              <p>
                MovieText
              </p>,
              <Link
                replace={false}
                to="/login"
              >
                <button
                  className="add-to-favs"
                >
                  Login to Save
                </button>
              </Link>,
            ],
            "className": "movie-info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span>
                    9.0
                  </span>,
                  <i
                    className="fas fa-star"
                  />,
                ],
                "className": "rating",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "9.0",
                  },
                  "ref": null,
                  "rendered": "9.0",
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "fas fa-star",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "i",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "MovieTitle",
              },
              "ref": null,
              "rendered": "MovieTitle",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "May4bewithyou",
              },
              "ref": null,
              "rendered": "May4bewithyou",
              "type": "h5",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "MovieText",
              },
              "ref": null,
              "rendered": "MovieText",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <button
                  className="add-to-favs"
                >
                  Login to Save
                </button>,
                "replace": false,
                "to": "/login",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Login to Save",
                  "className": "add-to-favs",
                },
                "ref": null,
                "rendered": "Login to Save",
                "type": "button",
              },
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
